--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,6 @@ LABEL maintainer="Splunk Inc. <DataEdge@splunk.com>"
 
 # skip runtime bundler installation
 ENV FLUENTD_DISABLE_BUNDLER_INJECTION 1
-COPY *.gem /tmp/
 
 RUN set -e \
  && apt-get update \
@@ -18,10 +17,9 @@ RUN set -e \
  && gem install -N fluent-plugin-prometheus -v "1.3.0" \
  && gem install -N fluent-plugin-jq -v "0.5.1" \
  && gem install -N oj -v "3.5.1" \
- && gem install -N /tmp/*.gem \
+ && gem install -N fluent-plugin-splunk-hec -v "${VERSION}" \
  && dpkgArch="$(dpkg --print-architecture | awk -F- '{ print $NF }')" \
- && wget -O /usr/bin/dumb-init https://github.com/Yelp/dumb-init/releases/download/v1.2.1/dumb-init_1.2.1_$dpkgArch \
- && chmod +x /usr/bin/dumb-init \
+ && apt-get install dumb-init \
  && apt-get purge -y --auto-remove \
                   -o APT::AutoRemove::RecommendsImportant=false \
                   $buildDeps \
@@ -29,8 +27,6 @@ RUN set -e \
  && rm -rf /tmp/* /var/tmp/* $GEM_HOME/cache/*.gem \
  && mkdir -p /fluentd/etc
 
- # See https://packages.debian.org/stretch/amd64/libjemalloc1/filelist
-ENV LD_PRELOAD "/usr/lib/x86_64-linux-gnu/libjemalloc.so.1"
 COPY entrypoint.sh /fluentd/entrypoint.sh
 
 ENTRYPOINT ["/fluentd/entrypoint.sh"]
